@startuml
'https://plantuml.com/class-diagram

class PrimeMinister{
    - {static}PreMinister instance
    'lưu tên, nhiệm kì thủ tướng'
    - String name, term
    'hàm constructor'
    - PreMinister()
    + {static}PreMinister getInstance()
    + String getName()
}
class Minister{
    - String name
    + Minister(String name)
    + void submitReport(String content)
}

Minister ..> PrimeMinister: send
PrimeMinister <-- PrimeMinister: instance
@enduml